# scout

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: SECURITY.md
scout/: __init__.py  activity.py  cli.py  cluster.py  registry.py  scoring.py
scout/data/: alpha_wallets.yaml  known_contracts.yaml  targets.yaml
tests/: test_cluster.py  test_registry.py  test_scoring.py
