[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scout-onchain"
version = "0.1.0"
description = "On-chain wallet and protocol intelligence primitives — registry, fit scoring, activity tracking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Abhishek Krishna", email = "krishna@kcolbchain.com" },
]
keywords = ["blockchain", "defi", "ethereum", "intelligence", "onchain", "research", "airdrop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
activity = ["aiohttp>=3.9"]
dev = ["pytest>=7.0", "aiohttp>=3.9"]

[project.scripts]
scout = "scout.cli:main"

[project.urls]
Homepage = "https://kcolbchain.com"
Documentation = "https://docs.kcolbchain.com/scout/"
Repository = "https://github.com/kcolbchain/scout"

[tool.setuptools]
packages = ["scout"]

[tool.setuptools.package-data]
scout = ["data/*.yaml"]
